[package]
authors = [
    "Jorge Aparicio <jorge@japaric.io>",
    "Daniel Egger <daniel@eggers-club.de>",
]
categories = ["embedded"]
description = "Peripheral access API for nRF51 microcontrollers"
documentation = "https://docs.rs/nrf51"
keywords = [
    "no-std",
    "arm",
    "cortex-m",
    "nordic",
]
license = "0BSD"
name = "nrf51"
repository = "https://github.com/therealprof/nrf51"
version = "0.5.2"
edition="2018"

[dependencies]
bare-metal = { version = "0.2.0", features = ["const-fn"] }
cortex-m = "0.5.8"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.5"

[features]
rt = ["cortex-m-rt/device"]
